--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">53 - 69 - 47 - 58 - 72</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">International</h3>
+                <p class="winning">61 - 23 - 78 - 32 - 22</p>
+                <p class="machine">43 - 28 - 41 - 71 - 37</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">67 - 75 - 45 - 34 - 71</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">42 - 2 - 31 - 69 - 52</p>
+                <p class="machine">64 - 76 - 9 - 10 - 46</p>        
             </article>
         </section>
     </div>
