--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -798,14 +798,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">21</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>May 23rd</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">67</td>
+                    <td class="winning">75</td>
+                    <td class="winning">45</td>
+                    <td class="winning">34</td>
+                    <td class="winning" id="lbw">71</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
