--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">wednesday 22/05/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">79 - 37 - 6 - 40 - 42</p>
-                <p class="machine">69 - 62 - 18 - 9 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">24 - 76 - 51 - 26 - 45</p>
-                <p class="machine">19 - 40 - 81 - 80 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">87 - 85 - 47 - 23 - 5</p>
-                <p class="machine">38 - 16 - 44 - 4 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">7 - 35 - 66 - 71 - 63</p>
-                <p class="machine">42 - 22 - 70 - 85 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">84 - 23 - 17 - 65 - 71</p>
-                <p class="machine">73 - 2 - 49 - 81 - 88</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">22 - 4 - 28 - 68 - 86</p>
-                <p class="machine">69 - 83 - 46 - 48 - 34</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">thursday 23/05/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">67 - 75 - 45 - 34 - 71</p>
-                <p class="machine"></p>        
+                <p class="machine">58 - 2 - 72 - 10 - 11</p>        
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
                 <p class="winning">42 - 2 - 31 - 69 - 52</p>
                 <p class="machine">64 - 76 - 9 - 10 - 46</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">friday 24/05/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">27 - 32 - 24 - 34 - 45</p>
+                <p class="machine">1 - 82 - 63 - 51 - 71</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">36 - 63 - 32 - 34 - 45</p>
+                <p class="machine">84 - 70 - 11 - 65 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">26 - 32 - 56 - 43 - 68</p>
+                <p class="machine">55 - 22 - 52 - 36 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">22 - 49 - 12 - 70 - 43</p>
+                <p class="machine">81 - 20 - 3 - 80 - 27</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">42 - 6 - 34 - 43 - 54</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">25 - 7 - 32 - 68 - 52</p>
+                <p class="machine">78 - 65 - 79 - 8 - 3</p>        
             </article>
         </section>
     </div>
