--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
-    <!-- End Google Tag Manager -->
+            <!-- Google Tag Manager -->
+            <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
+            <!-- End Google Tag Manager -->
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +15,18 @@
         <meta name="description" content="Visual Lotto Board is a platform that provides information related to Premier Lotto (Baba Ijebu) and Ghana lottery results. You can find past and current results on your devices through this service">
 
         <meta property="og:title" content="Visual Lotto Board - Baba Ijebu and Lotto result, yesterday and past results">
-        <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT">
+        <meta property="og:description" content="Digital board for Premier Lotto, Baba Ijebu results, Ghana results and lotto classification chart">
         <meta property="og:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png">
-        <meta property="og:image:alt" content="https://i.postimg.cc/mgJRmrPV/mobile-2.png">
+        <meta property="og:image:alt" content="Visual Lotto Baord logo, name and picture of game available on the webpage">
         <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/">
+
+                <!-- twitter-->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="VisuaLottoBoard">
+        <meta name="twitter:title" content="Visual Lotto Board - Baba Ijebu and Lotto result, yesterday and past results">
+        <meta name="twitter:description" content="Digital board for Premier Lotto, Baba Ijebu results, Ghana results and lotto classification chart">
+        <meta name="twitter:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png">
+        <meta name="twitter:url" content="https://vlb.hologutibusinesscentre.com/">
 
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -30,17 +38,16 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="./GAMES/viewStyle.css">
-        <link rel="stylesheet" href="./style-folder/carry1st.css">
         <!-- <link rel="stylesheet" href="/review-and-demo.css"> -->
 
 
     </head>
     <body>
 
-            <!-- Google Tag Manager (noscript) -->
-                    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
-                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-            <!-- End Google Tag Manager (noscript) -->
+                <!-- Google Tag Manager (noscript) -->
+                <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+                <!-- End Google Tag Manager (noscript) -->
 
         <!-- <div id="loading">
             <img src="/Assets/VLB_logo-removebg-loading-Img.jpg" id="loadingImage">
@@ -49,10 +56,10 @@
 
         <header>
             <div id="brand-container">
-                <div href="/" aria-current="page">
-                    <img src="https://i.postimg.cc/q7Z9GRCC/VLB-logo-removebg-preview.png" alt="logo" id="vlb-logo" >
-                </div>
-                <h1 id="visual-lotto-board">Visual Lotto Board</h1>
+                <!-- <div href="/" aria-current="page"> -->
+                    <img src="https://i.postimg.cc/L5wCns07/VLB-logo-removebg-preview-200px.png" alt="logo" id="vlb-logo" >
+                    <h1 id="visual-lotto-board">Visual Lotto Board</h1>
+                <!-- </div> -->
             </div>
             <nav>
                 <h1 class="list-of-games">List of Games</h1>
@@ -226,11 +233,12 @@
 
                 <div class="getInTouch">
                     <span class="span in-touch">Get in Touch</span>
-                    <a href="tel:+2348059336938" class="contact">08059336938</a>
-                    <a href="mailto:vlb@hologutibusinesscentre.com" class="contact">vlb@hologutibusinesscentre.com</a>
+                    <a href="tel:+2348059336938" class="contact"><i class="fa-solid fa-phone"></i></a>
+                    <a href="mailto:vlb@hologutibusinesscentre.com" class="contact"><i class="fa-solid fa-envelope"></i></a>
                 </div>
                 <div class="stayConnected">
                     <span class="span connected">Stay connected</span>
+                    <p>Follow us on Social Media</p>
                     <div class="icon-wrapper">
                         <a href="https://twitter.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
                         <a href="https://www.facebook.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
