--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -802,11 +802,11 @@
                     <td class="winning" id="lbw">54</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">77</td>
+                    <td class="machine">8</td>
+                    <td class="machine">89</td>
+                    <td class="machine">58</td>
+                    <td class="machine" id="lbm">48</td>
                 </tr>
             </tbody> 
 
