--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -1546,6 +1546,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">42</td>
+                    <td class="days"><small>May 25th sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">7</td>
+                    <td class="winning">13</td>
+                    <td class="winning">19</td>
+                    <td class="winning">20</td>
+                    <td class="winning" id="lbw">78</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">35</td>
+                    <td class="machine">81</td>
+                    <td class="machine">34</td>
+                    <td class="machine">79</td>
+                    <td class="machine" id="lbm">8</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day43-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">43</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
