--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">thursday 23/05/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">27 - 79 - 71 - 56 - 47</p>
-                <p class="machine">64 - 30 - 53 - 86 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">2 - 21 - 44 - 83 - 52</p>
-                <p class="machine">48 - 77 - 73 - 56 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">59 - 35 - 49 - 82 - 33</p>
-                <p class="machine">53 - 69 - 47 - 58 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">61 - 23 - 78 - 32 - 22</p>
-                <p class="machine">43 - 28 - 41 - 71 - 37</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">67 - 75 - 45 - 34 - 71</p>
-                <p class="machine">58 - 2 - 72 - 10 - 11</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">42 - 2 - 31 - 69 - 52</p>
-                <p class="machine">64 - 76 - 9 - 10 - 46</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">friday 24/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Bonanza</h3>
                 <p class="winning">42 - 6 - 34 - 43 - 54</p>
-                <p class="machine"></p>        
+                <p class="machine">77 - 8 - 89 - 58 - 48</p>        
             </article>
             <article>
                 <h3 class="game">vag</h3>
                 <p class="winning">25 - 7 - 32 - 68 - 52</p>
                 <p class="machine">78 - 65 - 79 - 8 - 3</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 25/05/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">39 - 41 - 25 - 11 - 47</p>
+                <p class="machine">59 - 2 - 77 - 16 - 46</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">68 - 56 - 61 - 67 - 26</p>
+                <p class="machine">19 - 58 - 49 - 50 - 23</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">7 - 13 - 19 - 20 - 78</p>
+                <p class="machine">35 - 81 - 34 - 79 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
