--- a/GAMES/16Fair-c.html
+++ b/GAMES/16Fair-c.html
@@ -1593,6 +1593,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">42</td>
+                    <td class="days"><small>May 25th sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">10</td>
+                    <td class="winning">45</td>
+                    <td class="winning">85</td>
+                    <td class="winning">63</td>
+                    <td class="winning" id="lbw">17</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">52</td>
+                    <td class="machine">43</td>
+                    <td class="machine">35</td>
+                    <td class="machine">18</td>
+                    <td class="machine" id="lbm">40</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day43-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">43</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
