--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">35 - 81 - 34 - 79 - 8</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">06</h3>
+                <p class="winning">63 - 74 - 5 - 47 - 64</p>
+                <p class="machine">32 - 58 - 39 - 76 - 42</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">72 - 51 - 43 - 40 - 26</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">10 - 45 - 85 - 63 - 17</p>
+                <p class="machine">52 - 43 - 35 - 18 - 40</p>        
             </article>
         </section>
     </div>
