--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -1549,6 +1549,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">42</td>
+                    <td class="days"><small>May 25th sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">63</td>
+                    <td class="winning">74</td>
+                    <td class="winning">5</td>
+                    <td class="winning">47</td>
+                    <td class="winning" id="lbw">64</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">32</td>
+                    <td class="machine">58</td>
+                    <td class="machine">39</td>
+                    <td class="machine">76</td>
+                    <td class="machine" id="lbm">42</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day43-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">43</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
@@ -1565,7 +1587,7 @@
                     <td class="machine"></td>
                     <td class="machine" id="lbm"></td>
                 </tr>
-            </tbody> 
+            </tbody>
         </table>
         <span>06</span>
     </main> 
