result mark2 testing webhook

--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
         </footer>
         <!-- <script src="/Scripts/loading.js"></script> -->
         <script src="script.js"></script>
+        <script src="/Scripts/Message.js"></script>
     </body>
 </html>
         
