--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">friday 24/05/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">27 - 32 - 24 - 34 - 45</p>
-                <p class="machine">1 - 82 - 63 - 51 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">36 - 63 - 32 - 34 - 45</p>
-                <p class="machine">84 - 70 - 11 - 65 - 7</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">26 - 32 - 56 - 43 - 68</p>
-                <p class="machine">55 - 22 - 52 - 36 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">22 - 49 - 12 - 70 - 43</p>
-                <p class="machine">81 - 20 - 3 - 80 - 27</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">42 - 6 - 34 - 43 - 54</p>
-                <p class="machine">77 - 8 - 89 - 58 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">25 - 7 - 32 - 68 - 52</p>
-                <p class="machine">78 - 65 - 79 - 8 - 3</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 25/05/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">10 - 45 - 85 - 63 - 17</p>
                 <p class="machine">52 - 43 - 35 - 18 - 40</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date"></h2>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">53 - 30 - 62 - 76 - 35</p>
+                <p class="machine">13 - 14 - 77 - 12 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">7 - 16 - 13 - 57 - 38</p>
+                <p class="machine">78 - 69 - 47 - 82 - 49</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">54 - 31 - 18 - 83 - 19</p>
+                <p class="machine">7 - 15 - 87 - 66 - 51</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
