Result MAY 26/Sunday/2024

--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -801,11 +801,11 @@
                     <td class="winning" id="lbw">26</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">31</td>
+                    <td class="machine">67</td>
+                    <td class="machine">62</td>
+                    <td class="machine">13</td>
+                    <td class="machine" id="lbm">64</td>
                 </tr>
             </tbody> 
 
