--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -222,7 +222,7 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">72 - 51 - 43 - 40 - 26</p>
-                <p class="machine"></p>        
+                <p class="machine">31 - 67 - 62 - 13 - 64</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
@@ -232,17 +232,7 @@
         </section>
 
         <section aria-label="today result">
-            <h2 class="date"></h2>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
+            <h2 class="date">sunday 26/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
                 <p class="winning">53 - 30 - 62 - 76 - 35</p>
@@ -259,9 +249,19 @@
                 <p class="machine">7 - 15 - 87 - 66 - 51</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">46 - 82 - 13 - 60 - 8</p>
+                <p class="machine">73 - 14 - 87 - 6 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">68 - 48 - 76 - 33 - 15</p>
+                <p class="machine">56 - 82 - 4 - 69 - 39</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">54 - 46 - 76 - 27 - 51</p>
+                <p class="machine">83 - 3 - 37 - 79 - 18</p>        
             </article>
         </section>
     </div>
