--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
             </aside>
         </div>
 
+        <div id="message" style="color: #008000; background-color: #000;"></div>
+
         <a href="#" id="top" aria-label="scroll up"><i class="fa-solid fa-arrow-up"></i></a>
 
                 <!-- main -->
