--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">saturday 25/05/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">39 - 41 - 25 - 11 - 47</p>
-                <p class="machine">59 - 2 - 77 - 16 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">68 - 56 - 61 - 67 - 26</p>
-                <p class="machine">19 - 58 - 49 - 50 - 23</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">7 - 13 - 19 - 20 - 78</p>
-                <p class="machine">35 - 81 - 34 - 79 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">63 - 74 - 5 - 47 - 64</p>
-                <p class="machine">32 - 58 - 39 - 76 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">72 - 51 - 43 - 40 - 26</p>
-                <p class="machine">31 - 67 - 62 - 13 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">10 - 45 - 85 - 63 - 17</p>
-                <p class="machine">52 - 43 - 35 - 18 - 40</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 26/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">54 - 46 - 76 - 27 - 51</p>
                 <p class="machine">83 - 3 - 37 - 79 - 18</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">monday 27/05/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">68 - 35 - 50 - 11 - 86</p>
+                <p class="machine">40 - 75 - 59 - 38 - 88</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">16 - 72 - 84 - 38 - 51</p>
+                <p class="machine">53 - 48 - 21 - 45 - 15</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">67 - 21 - 31 - 55 - 26</p>
+                <p class="machine">69 - 51 - 83 - 24 - 5</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
