Result MAY 27/Monday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">69 - 51 - 83 - 24 - 5</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Metro</h3>
+                <p class="winning">62 - 50 - 69 - 86 - 42</p>
+                <p class="machine">43 - 4 - 77 - 39 - 71</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">38 - 30 - 33 - 1 - 25</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">67 - 23 - 69 - 15 - 56</p>
+                <p class="machine">25 - 54 - 27 - 32 - 29</p>        
             </article>
         </section>
     </div>
@@ -467,5 +467,18 @@
             </tbody>
         </table>
     </div>
+     <!--Start of Tawk.to Script-->
+     <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/6654cdc9981b6c5647752f52/1hutp9hto';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 </html>
