--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -820,14 +820,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">22</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>May 27th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">38</td>
+                    <td class="winning">30</td>
+                    <td class="winning">33</td>
+                    <td class="winning">1</td>
+                    <td class="winning" id="lbw">25</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
@@ -837,7 +837,6 @@
                     <td class="machine" id="lbm"></td>
                 </tr>
             </tbody> 
-
         </table>
         <span>MSP</span>
     </main>
