--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">sunday 26/05/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">53 - 30 - 62 - 76 - 35</p>
-                <p class="machine">13 - 14 - 77 - 12 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">7 - 16 - 13 - 57 - 38</p>
-                <p class="machine">78 - 69 - 47 - 82 - 49</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">54 - 31 - 18 - 83 - 19</p>
-                <p class="machine">7 - 15 - 87 - 66 - 51</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">46 - 82 - 13 - 60 - 8</p>
-                <p class="machine">73 - 14 - 87 - 6 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">68 - 48 - 76 - 33 - 15</p>
-                <p class="machine">56 - 82 - 4 - 69 - 39</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">54 - 46 - 76 - 27 - 51</p>
-                <p class="machine">83 - 3 - 37 - 79 - 18</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">monday 27/05/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">38 - 30 - 33 - 1 - 25</p>
-                <p class="machine"></p>        
+                <p class="machine">40 - 54 - 56 - 86 - 80</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
                 <p class="winning">67 - 23 - 69 - 15 - 56</p>
                 <p class="machine">25 - 54 - 27 - 32 - 29</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 28/05/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">68 - 81 - 34 - 63 - 18</p>
+                <p class="machine">6 - 56 - 33 - 77 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">2 - 64 - 29 - 86 - 56</p>
+                <p class="machine">3 - 45 - 70 - 15 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">76 - 49 - 38 - 58 - 5</p>
+                <p class="machine">23 - 65 - 56 - 34 - 3</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
