Result MAY 28/tuesday/2024

--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -1567,6 +1567,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">43</td>
+                    <td class="days"><small>May 28th tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">58</td>
+                    <td class="winning">84</td>
+                    <td class="winning">33</td>
+                    <td class="winning">29</td>
+                    <td class="winning" id="lbw">60</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">7</td>
+                    <td class="machine">3</td>
+                    <td class="machine">83</td>
+                    <td class="machine">80</td>
+                    <td class="machine" id="lbm">28</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day 44-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">44</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
