--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -13,11 +13,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Result | Baba Ijebu</title>
 
-    <!-- <meta property="og:title" content="Visual Lotto Board">
-    <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT"> -->
-    <meta property="og:image" content="https://i.postimg.cc/bvtgv7Yb/vlb-day-Result-cover.png">
+    <meta property="og:title" content="Daily Result | Baba Ijebu">
+    <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT"> 
+    <meta property="og:image" content="https://i.postimg.cc/nzvC41Zw/vlb-day-Result-cover2.png">
     <meta property="og:image:alt" content="premier lotto winning and machine result">
     <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/GAMES/dailyResult">
+
+    <!-- twitter-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@visuaLottoBoard">
+    <meta name="twitter:title" content="Daily Result | Baba Ijebu">
+    <meta name="twitter:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT">
+    <meta name="twitter:image" content="https://i.postimg.cc/nzvC41Zw/vlb-day-Result-cover2.png">
+    <meta name="twitter:url" content="https://vlb.hologutibusinesscentre.com/GAMES/dailyResult">
 
     <link rel="canonical" href="https://vlb.hologutibusinesscentre.com/GAMES/dailyResult">
 
@@ -249,19 +257,19 @@
                 <p class="machine">23 - 65 - 56 - 34 - 3</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">27 - 71 - 84 - 52 - 49</p>
+                <p class="machine">6 - 75 - 70 - 44 - 32</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">58 - 1 - 6 - 28 - 82</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Super</h3>
+                <p class="winning">58 - 84 - 33 - 29 - 60</p>
+                <p class="machine">7 - 3 - 83 - 80 - 28</p>        
             </article>
         </section>
     </div>
