--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <!-- twitter-->
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="VisuaLottoBoard">
+        <meta name="twitter:site" content="@VisuaLottoBoard">
         <meta name="twitter:title" content="Visual Lotto Board - Baba Ijebu and Lotto result, yesterday and past results">
         <meta name="twitter:description" content="Digital board for Premier Lotto, Baba Ijebu results, Ghana results and lotto classification chart">
         <meta name="twitter:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png">
