--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -821,6 +821,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">22</td>
+                    <td class="days"><small>May 28th</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">58</td>
+                    <td class="winning">1</td>
+                    <td class="winning">6</td>
+                    <td class="winning">28</td>
+                    <td class="winning" id="lbw">82</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day23-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">23</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
