--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -1568,6 +1568,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">43</td>
+                    <td class="days"><small>May 28th tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">27</td>
+                    <td class="winning">71</td>
+                    <td class="winning">84</td>
+                    <td class="winning">52</td>
+                    <td class="winning" id="lbw">49</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">6</td>
+                    <td class="machine">75</td>
+                    <td class="machine">70</td>
+                    <td class="machine">44</td>
+                    <td class="machine" id="lbm">32</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day44-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">44</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
