--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -831,11 +831,11 @@
                     <td class="winning" id="lbw">82</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">49</td>
+                    <td class="machine">79</td>
+                    <td class="machine">35</td>
+                    <td class="machine">20</td>
+                    <td class="machine" id="lbm">9</td>
                 </tr>
             </tbody> 
 
