--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">monday 27/05/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">68 - 35 - 50 - 11 - 86</p>
-                <p class="machine">40 - 75 - 59 - 38 - 88</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">16 - 72 - 84 - 38 - 51</p>
-                <p class="machine">53 - 48 - 21 - 45 - 15</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">67 - 21 - 31 - 55 - 26</p>
-                <p class="machine">69 - 51 - 83 - 24 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">62 - 50 - 69 - 86 - 42</p>
-                <p class="machine">43 - 4 - 77 - 39 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">38 - 30 - 33 - 1 - 25</p>
-                <p class="machine">40 - 54 - 56 - 86 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">67 - 23 - 69 - 15 - 56</p>
-                <p class="machine">25 - 54 - 27 - 32 - 29</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">tuesday 28/05/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">LUCKY-G</h3>
                 <p class="winning">58 - 1 - 6 - 28 - 82</p>
-                <p class="machine"></p>        
+                <p class="machine">49 - 79 - 35 - 20 - 9</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
                 <p class="winning">58 - 84 - 33 - 29 - 60</p>
                 <p class="machine">7 - 3 - 83 - 80 - 28</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">wednesday 29/05/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">40 - 42 - 9 - 71 - 38</p>
+                <p class="machine">43 - 15 - 88 - 33 - 63</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">17 - 12 - 3 - 55 - 28</p>
+                <p class="machine">76 - 43 - 74 - 8 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">25 - 87 - 37 - 48 - 61</p>
+                <p class="machine">62 - 21 - 15 - 26 - 41</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
