--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">62 - 21 - 15 - 26 - 41</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">67 - 71 - 43 - 41 - 32</p>
+                <p class="machine">35 - 55 - 23 - 73 - 51</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">22 - 72 - 61 - 1 - 34</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">53 - 29 - 13 - 38 - 89</p>
+                <p class="machine">39 - 21 - 45 - 49 - 82</p>        
             </article>
         </section>
     </div>
