--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -830,11 +830,11 @@
                     <td class="winning" id="lbw">34</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">43</td>
+                    <td class="machine">49</td>
+                    <td class="machine">29</td>
+                    <td class="machine">35</td>
+                    <td class="machine" id="lbm">60</td>
                 </tr>
             </tbody> 
 
