--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">tuesday 28/05/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">68 - 81 - 34 - 63 - 18</p>
-                <p class="machine">6 - 56 - 33 - 77 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">2 - 64 - 29 - 86 - 56</p>
-                <p class="machine">3 - 45 - 70 - 15 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">76 - 49 - 38 - 58 - 5</p>
-                <p class="machine">23 - 65 - 56 - 34 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">27 - 71 - 84 - 52 - 49</p>
-                <p class="machine">6 - 75 - 70 - 44 - 32</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">58 - 1 - 6 - 28 - 82</p>
-                <p class="machine">49 - 79 - 35 - 20 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">58 - 84 - 33 - 29 - 60</p>
-                <p class="machine">7 - 3 - 83 - 80 - 28</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">wednesday 29/05/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">22 - 72 - 61 - 1 - 34</p>
-                <p class="machine"></p>        
+                <p class="machine">43 - 49 - 29 - 35 - 60</p>        
             </article>
             <article>
                 <h3 class="game">Lucky</h3>
                 <p class="winning">53 - 29 - 13 - 38 - 89</p>
                 <p class="machine">39 - 21 - 45 - 49 - 82</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">thursday 30/05/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">50 - 4 - 27 - 57 - 81</p>
+                <p class="machine">7 - 74 - 30 - 47 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">12 - 60 - 9 - 28 - 3</p>
+                <p class="machine">8 - 73 - 63 - 76 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">61 - 87 - 90 - 43 - 10</p>
+                <p class="machine">22 - 74 - 73 - 81 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
