Result MAY/Thursday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -257,19 +257,19 @@
                 <p class="machine">22 - 74 - 73 - 81 - 45</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">International</h3>
+                <p class="winning">31 - 38 - 34 - 46 - 50</p>
+                <p class="machine">41 - 22 - 80 - 14 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">90 - 37 - 39 - 61 - 21</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">62 - 16 - 21 - 40 - 26</p>
+                <p class="machine">54 - 63 - 12 - 4 - 60</p>        
             </article>
         </section>
     </div>
