--- a/classification.html
+++ b/classification.html
@@ -47,11 +47,11 @@
             height: 100px;
             background-color: #fff;
             border-radius: 100px;
-            outline: 1px solid #add8eb;
+            box-shadow: 0px 0px 15px 2px #ff0000;
+
         }
 
         h1 {
-            /* color: #add8eb; */
             color: #fff;
             text-align: center;
             text-transform: uppercase;
@@ -91,7 +91,6 @@
             background-color: #ff0000;
         }
         .className {
-            /* writing-mode: vertical-rl; */
             writing-mode: vertical-lr;
             padding: 5px;
         }
