Result MAY 31/Friday/2024

--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -830,11 +830,11 @@
                     <td class="winning" id="lbw">21</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">82</td>
+                    <td class="machine">41</td>
+                    <td class="machine">59</td>
+                    <td class="machine">24</td>
+                    <td class="machine" id="lbm">55</td>
                 </tr>
             </tbody> 
 
