--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">wednesday 29/05/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">40 - 42 - 9 - 71 - 38</p>
-                <p class="machine">43 - 15 - 88 - 33 - 63</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">17 - 12 - 3 - 55 - 28</p>
-                <p class="machine">76 - 43 - 74 - 8 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">25 - 87 - 37 - 48 - 61</p>
-                <p class="machine">62 - 21 - 15 - 26 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">67 - 71 - 43 - 41 - 32</p>
-                <p class="machine">35 - 55 - 23 - 73 - 51</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">22 - 72 - 61 - 1 - 34</p>
-                <p class="machine">43 - 49 - 29 - 35 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">53 - 29 - 13 - 38 - 89</p>
-                <p class="machine">39 - 21 - 45 - 49 - 82</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">thursday 30/05/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -264,12 +230,46 @@
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">90 - 37 - 39 - 61 - 21</p>
-                <p class="machine"></p>        
+                <p class="machine">82 - 41 - 59 - 24 - 55</p>        
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
                 <p class="winning">62 - 16 - 21 - 40 - 26</p>
                 <p class="machine">54 - 63 - 12 - 4 - 60</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">friday 31/05/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">31 - 58 - 4 - 49 - 23</p>
+                <p class="machine">57 - 33 - 27 - 37 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">2 - 44 - 24 - 69 - 18</p>
+                <p class="machine">62 - 53 - 59 - 70 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">14 - 12 - 6 - 44 - 51</p>
+                <p class="machine">48 - 88 - 5 - 39 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">9 - 52 - 71 - 57 - 68</p>
+                <p class="machine">23 - 2 - 10 - 5 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">52 - 53 - 83 - 34 - 4</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">82 - 41 - 61 - 32 - 59</p>
+                <p class="machine">73 - 16 - 37 - 19 - 23</p>        
             </article>
         </section>
     </div>
