--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -1590,6 +1590,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">44</td>
+                    <td class="days"><small>Jun 1st sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">18</td>
+                    <td class="winning">24</td>
+                    <td class="winning">6</td>
+                    <td class="winning">17</td>
+                    <td class="winning" id="lbw">88</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">84</td>
+                    <td class="machine">53</td>
+                    <td class="machine">76</td>
+                    <td class="machine">63</td>
+                    <td class="machine" id="lbm">44</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day45-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">45</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
