--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">thursday 30/05/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">50 - 4 - 27 - 57 - 81</p>
-                <p class="machine">7 - 74 - 30 - 47 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">12 - 60 - 9 - 28 - 3</p>
-                <p class="machine">8 - 73 - 63 - 76 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">61 - 87 - 90 - 43 - 10</p>
-                <p class="machine">22 - 74 - 73 - 81 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">31 - 38 - 34 - 46 - 50</p>
-                <p class="machine">41 - 22 - 80 - 14 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">90 - 37 - 39 - 61 - 21</p>
-                <p class="machine">82 - 41 - 59 - 24 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">62 - 16 - 21 - 40 - 26</p>
-                <p class="machine">54 - 63 - 12 - 4 - 60</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">friday 31/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -270,6 +236,40 @@
                 <h3 class="game">vag</h3>
                 <p class="winning">82 - 41 - 61 - 32 - 59</p>
                 <p class="machine">73 - 16 - 37 - 19 - 23</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 01/06/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">51 - 26 - 71 - 76 - 50</p>
+                <p class="machine">36 - 30 - 62 - 68 - 53</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">73 - 57 - 1 - 9 - 63</p>
+                <p class="machine">80 - 38 - 8 - 54 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">18 - 24 - 6 - 17 - 88</p>
+                <p class="machine">84 - 53 - 76 - 63 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
