--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -1589,6 +1589,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">44</td>
+                    <td class="days"><small>Jun 1st sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">73</td>
+                    <td class="winning">57</td>
+                    <td class="winning">1</td>
+                    <td class="winning">9</td>
+                    <td class="winning" id="lbw">63</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">80</td>
+                    <td class="machine">38</td>
+                    <td class="machine">8</td>
+                    <td class="machine">54</td>
+                    <td class="machine" id="lbm">34</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day45-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">45</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
