--- a/GAMES/23King.html
+++ b/GAMES/23King.html
@@ -816,6 +816,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">22</td>
+                    <td class="days"><small>Jun 1st sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">51</td>
+                    <td class="winning">26</td>
+                    <td class="winning">71</td>
+                    <td class="winning">76</td>
+                    <td class="winning" id="lbw">50</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">36</td>
+                    <td class="machine">30</td>
+                    <td class="machine">62</td>
+                    <td class="machine">68</td>
+                    <td class="machine" id="lbm">53</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day23-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">23</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
